Name:                xhb-monad-build-utils
Version:             0.1
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable gen-xhb-monad

  main-is:           Main.hs
  build-depends:     base
                   , directory
                   , filepath
                   , haskell-src-exts
                   , Cabal
